fix dark mode

--- a/Helium/gtk-4.0/_tauos.scss
+++ b/Helium/gtk-4.0/_tauos.scss
@@ -798,7 +798,16 @@ $colors: (
 }
 
 .main-view {
-  background: gtkmix($bg_color, $accent_bg_color, 0.03);
+  background: if(
+        $variant == "light",
+        gtkmix($bg_color, $accent_bg_color, 0.03);
+        gtkmix($bg_color, $accent_bg_color, 0.08);
+  );
+  color: if(
+        $variant == "light",
+        gtkmix($view_fg_color, $accent_bg_color, 0.08);
+        gtkmix($view_fg_color, $accent_bg_color, 0.03);
+  );
 
   & .mini-content-block,
   & .content-block {
@@ -806,7 +815,6 @@ $colors: (
     
     & entry {
       background-color: gtkalpha($accent_bg_color, 0.08);
-      color: $card_fg_color;
     }
   }
 }
